Fix css in Login component.Gaps,ellements width,gaps betwen error messages and inputs was fixed

--- a/src/Assets/Styles/Login.css
+++ b/src/Assets/Styles/Login.css
@@ -29,7 +29,7 @@
 .show {
     background-color: rgb(68, 51, 160);
     height: 2.5rem;
-    width: 10%;
+    width: max-content;
     line-height: 2.1rem;
     padding: 0px 5px;
     border-radius: 5px;
@@ -38,7 +38,7 @@
 
 }
 .login-form__tittle {
-    margin-bottom: 10px;
+    margin: 10px 0 20px 0;
 }
 .login_form {
     height: 100%;
@@ -94,10 +94,16 @@
 
     .LoginByEmailAndPassword {
         width: 100%;
-
-
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 3px;
     }
-
+    .create-account-link {
+        color: rgb(104, 187, 195);
+        font-size: 22px;
+        width: 150px;
+    }
     .login_page_container a {
         width: 5rem;
 
@@ -130,18 +136,6 @@
 
     #passwordInput {
         width: 90%;
-    }
-
-    .show {
-        background-color: rgb(68, 51, 160);
-        height: 2.5rem;
-        width: 10%;
-        line-height: 2.1rem;
-        padding: 0px 5px;
-        border-radius: 5px;
-        margin-left: 2px;
-        display: block;
-
     }
 
     #passwordShow {
